--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.apis.com/icon?family=Material+Icons"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
