--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="../src/imgs/logo.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="description" content="Musical Theatre based social and gaming app">
+    <meta name="keywords" content="Musical Theatre, Games, Broadway ">
+    <meta name="authors" content="Habby Olusesi, Richard Walter, Michael Wittorp, Kirby Reese, Victoria Hunter, Randall Frye">
     <meta name="theme-color" content="#000000" />
 
     <link
